@@ -83,6 +83,8 @@
 			<label index="pI_hits24hours">Last 24 hours</label>
 			<label index="pI_hits10days">Last 10 days</label>
 			<label index="content_from_pid_title">Page uses content from this page: %s</label>
+			<label index="goToListModule">Go to list module</label>
+			<label index="goToListModuleMessage">The current page is of the type "Sysfolder". Sysfolders usually don't contain content elements but are used for collecting other types of records in a single folder.</label>
 		</languageKey>
 	</data>
 </T3locallang>
